# labmate-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
labmate_mcp/: __init__.py  __main__.py  apis.py  bench.py  chemistry.py  env_loader.py  peptide.py  server.py  setup_wizard.py  writing.py
streamlit_app/: README.md  app.py  requirements.txt
