[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labmate-mcp"
version = "4.0.0"
description = "Your AI lab companion — 28 MCP tools across 19 APIs for scientific research"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "mcp", "chemistry", "research", "literature", "pubchem", "crossref",
    "semantic-scholar", "openalex", "crystal-structures", "bibtex",
    "retrosynthesis", "mass-spectrometry", "materials-project",
    "protein-structures", "pdb", "nist", "thermochemistry",
    "claude", "anthropic", "ai-assistant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/JonasRackl/labmate-mcp"
Issues = "https://github.com/JonasRackl/labmate-mcp/issues"

[project.scripts]
labmate-mcp = "labmate_mcp.server:main"

[tool.setuptools.packages.find]
include = ["labmate_mcp*"]
